--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@
 .repl_history
 build/
 
+## Specific to Rubymine
+.idea/*
+
 ## Documentation cache and generated files:
 /.yardoc/
 /_yardoc/
@@ -27,8 +30,8 @@ build/
 # for a library or gem, you might want to ignore these files since the code is
 # intended to run in multiple environments; otherwise, check them in:
 # Gemfile.lock
-# .ruby-version
-# .ruby-gemset
+.ruby-version
+.ruby-gemset
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
